@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class GreenSpace {
  - String name
  - String adress
  - String type
  - Int area
  - Email email
}
class ApplicationSession
{
    + static getInstance()
    + getCurrentSession()
}

class GreenSpacedto {
  - String name
  - String adress
  - String type
  - Int area
  - Email email
}

class GreenSpaceMapper {
  + GreenSpaceDTO toDTO(GreenSpace greenSpace)
  + GreenSpace toEntity(GreenSpaceDTO greenSpaceDTO)
}



class ListGreenSpacesUI {
}

class ListGreenSpacesController {
    + ListGreenSpacesController(GreenSpaceRepository)
    + getGreenSpaceList()
    + addGreenSpaceToList(GreenSpace)

}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getGreenSpaceRepository()
}

class GreenSpaceRepository {
    + getGreenSpaceList()
}



Repositories -> Repositories : instance
Repositories --> "1" GreenSpaceRepository: GreenSpaceRepository
ListGreenSpacesController ...> Repositories: repositories
ListGreenSpacesController ...> GreenSpaceRepository: GreenSpaceRepository

ListGreenSpacesUI ..> ListGreenSpacesController

GreenSpaceRepository "1" -> "*" GreenSpace : GreenSpace
ListGreenSpacesController ..> GreenSpaceMapper: greenSpaceMapper
GreenSpaceMapper ..> GreenSpacedto
GreenSpaceMapper ..> GreenSpace
ListGreenSpacesController ..> ApplicationSession
ApplicationSession ..> ApplicationSession: getinstance



@enduml